# AdventOfCode2017

./: .gitmodules  CMakeLists.txt  README.md
01-inverse-captcha/: CMakeLists.txt  captcha.cpp  captcha.h
01-inverse-captcha/tests/: captcha_test.cpp
02-corruption-checksum/: CMakeLists.txt  checksum.cpp  checksum.h  input.txt  main.cpp
02-corruption-checksum/tests/: checksum_test.cpp
03-spiral-memory/: CMakeLists.txt  main.cpp  spiral.cpp  spiral.h
03-spiral-memory/tests/: spiral_test.cpp
04-passphrases/: CMakeLists.txt  main.cpp  passphrases.cpp
05-jumps/: .jumps.cpp.swp  CMakeLists.txt  main.cpp
06-allocations/: CMakeLists.txt  allocations.cpp  main.cpp
07-recursive-circus/: CMakeLists.txt  input_small.txt  main.cpp
08-registers/: CMakeLists.txt  main.cpp
09-stream-processing/: CMakeLists.txt  main.cpp  stream.h
09-stream-processing/tests/: stream_tests.cpp
10-knot-hash/: CMakeLists.txt  main.cpp
11-hex-ed/: .main.cpp.swp  CMakeLists.txt  main.cpp
